added edit songs and webapi
